--- a/static/style/blue/base.css
+++ b/static/style/blue/base.css
@@ -1954,6 +1954,9 @@ div.permissionContainer{padding-left:20px}
 .history-panel .controls .list-actions .list-action-popup-btn{float:right}
 .history-panel .list-item.history-content{border-width:1px 0px 0px 0px}.history-panel .list-item.history-content:last-child{border-width:1px 0px 1px 0px}
 .history-panel .empty-message{margin:0px 10px 0px 10px}
+.history-panel .dataset-collection .subtitle{margin-top:2px;font-size:90%;color:#777}
+.history-panel .dataset-collection-panel .controls{padding:0px}
+.history-panel .dataset-collection-panel .list-items{margin-top:0px}
 .annotated-history-panel .controls{margin:0px}.annotated-history-panel .controls .name{font-size:150%;margin-bottom:4px}
 .annotated-history-panel .controls .subtitle{color:black}.annotated-history-panel .controls .subtitle:not(:empty){margin:0px 0px 0px 4px}
 .annotated-history-panel .controls .messages:not(:empty){margin-top:16px}
@@ -1965,9 +1968,8 @@ div.permissionContainer{padding-left:20px}
 .annotated-history-panel table.list-items>tbody>tr>td:nth-child(2){padding:8px 16px 8px 16px;white-space:pre-wrap}
 .annotated-history-panel table.list-items>tbody>tr>td>.list-item{border:0px}
 .annotated-history-panel .empty-message{margin-top:8px}
-.history-panel .dataset-collection .subtitle{margin-top:2px;font-size:90%;color:#777}
-.history-panel .dataset-collection-panel .controls{padding:0px}
-.history-panel .dataset-collection-panel .list-items{margin-top:0px}
+.current-history-panel .list-item.history-content.current-content{border:2px solid black;border-bottom-width:2px}.current-history-panel .list-item.history-content.current-content .title-bar{padding:5px 8px 6px 6px}
+.current-history-panel .list-item.history-content.current-content .details{padding:0px 8px 5px 6px}
 body.historyPage{background:#dfe5f9;color:#000;margin:5px;border:0;padding:0}
 div.historyLinks{margin:5px 5px}
 div.historyItem{margin:0 -5px;padding:8px 10px;border-top:solid #bfbfbf 1px;border-right:none;word-wrap:break-word;background:#eee}div.historyItem .state-icon{display:inline-block;vertical-align:middle;width:16px;height:16px;background-position:0 1px;background-repeat:no-repeat}
