ToolForm: Fix subsection creation

--- a/static/style/src/less/ui.less
+++ b/static/style/src/less/ui.less
@@ -62,7 +62,7 @@
     &:extend(.grid);
 
     tbody td {
-        padding: 5px 0px 5px 5px !important;
+        padding: 5px 0px 5px 0px !important;
         border: none !important;
     }
     
@@ -73,8 +73,8 @@
 
 .ui-table-form-section {
     border-left: solid 3px @form-heading-bg;
-    border-radius: 5px;
-    padding-left: 5px;
+    border-radius: 5px !important;
+    padding-left: 10px;
 }
 
 .ui-table-form-title-strong {
@@ -239,7 +239,7 @@
         padding: 0px;
         .content {
             padding     : 0px;
-            padding-left: 5px;
+            padding-left: 10px;
         }
     }
 }
