--- a/static/style/src/less/ui.less
+++ b/static/style/src/less/ui.less
@@ -12,7 +12,7 @@
     padding: 5px;
 }
 
-.ui-checkbox {
+.ui-options {
     &:extend(.form-control);
     height: 100% !important;
 }
@@ -40,9 +40,14 @@
 }
 
 .ui-radiobutton {
+    width: 100%;
     label {
         height: 23px;
         line-height: 1em;
+    }
+    
+    i {
+        padding-right: 5px;
     }
 }
 
