the removed select2 class overrule for edit hda attributes is needed afterall, I at least did rename it to specific to its usage so other select2 items can work normally

--- a/static/style/src/less/base.less
+++ b/static/style/src/less/base.less
@@ -16,7 +16,7 @@
 
 @import "select2.less";
 /* fix for zero width select2 - remove when fixed there */
-.select2-container {
+.select2-minwidth {
     min-width: 256px;
 }
 
