--- a/static/style/src/less/base.less
+++ b/static/style/src/less/base.less
@@ -16,6 +16,10 @@
 
 @import "select2.less";
 
+ /* fix for zero width select2 - remove when fixed there */
+.select2-minwidth {
+     min-width: 256px;
+}
 // galaxy sub-components
 @import "frame.less";
 @import "upload.less";
