Fixes to current dataset indicator and focused icon buttons

--- a/static/style/src/less/base.less
+++ b/static/style/src/less/base.less
@@ -455,16 +455,14 @@ div.unified-panel-body {
 
 
 
-.quota-meter-container
-{
+.quota-meter-container {
     position: absolute;
     top: 0;
     right: 0;
     height: 32px;
 }
 
-.quota-meter
-{
+.quota-meter {
     position: absolute;
     top: 8px;
     right: 8px;
@@ -473,8 +471,7 @@ div.unified-panel-body {
     background-color: @progress-bg;
 }
 
-.quota-meter-bar
-{
+.quota-meter-bar {
     position: absolute;
     top: 0;
     left: 0;
@@ -482,18 +479,15 @@ div.unified-panel-body {
     background-color: @brand-primary;
 }
 
-.quota-meter-bar-warn
-{
+.quota-meter-bar-warn {
     background-color: @brand-warning;
 }
 
-.quota-meter-bar-error
-{
+.quota-meter-bar-error {
     background-color: @brand-danger;
 }
 
-.quota-meter-text
-{
+.quota-meter-text {
     position: absolute;
     top: 50%;
     left: 0;
