--- a/static/style/src/less/history.less
+++ b/static/style/src/less/history.less
@@ -590,25 +590,14 @@
 // ---------------------------------------------------------------------------- current-history-panel
 .current-history-panel {
     .list-item.history-content.current-content {
-        //border-top: 2px solid black;
-        //border-right: 1px solid black;
-        //border-bottom: 2px solid black;
-        //border-left: 1px solid black;
 
-        //.title-bar {
-        //    border-color: black;
-        //    background: black;
-        //    color: white;
-        //}
-
-        //position: relative;
-        //margin-left: -24px;
-        //z-index: 1000;
-
-        border: 2px solid black;
+        border: 2px solid #333;
         border-bottom-width: 2px;
+        .primary-actions {
+            margin: 5px 8px 0px 0px;
+        }
         .title-bar {
-            padding: 5px 8px 6px 6px;
+            padding: 5px 8px 5px 6px;
         }
         .details {
             padding: 0px 8px 5px 6px;
