--- a/static/style/src/less/ui/icon-btn.less
+++ b/static/style/src/less/ui/icon-btn.less
@@ -44,16 +44,13 @@
 
     cursor: pointer;
 
-    // tweaks
-    //TODO: not working - span
-    //.fa-comment {
-    //    display: inline-block;
-    //    margin-bottom: 4px;
-    //}
-}
-.icon-btn:hover {
-    background-color: white;
-    color: maroon;
+    &:focus,
+    &:hover {
+        outline: 0;
+        background-color: white;
+        color: maroon;
+    }
+
 }
 .icon-btn.disabled {
     background-color: transparent;
