--- a/static/style/src/less/list-item.less
+++ b/static/style/src/less/list-item.less
@@ -73,6 +73,10 @@
             word-break: break-all;
             line-height: 16px;
         }
+//TODO: show keyboard/tab focus for keyboard users
+        //&:focus {
+        //    color: maroon;
+        //}
     }
 
     .primary-actions {
