ToolForm: Additional validation for batch mode, style fixes

--- a/static/style/src/less/ui.less
+++ b/static/style/src/less/ui.less
@@ -109,6 +109,7 @@
     &:extend(.icon-btn);
     border: none !important;
     background: none !important;
+    height: inherit !important;
 }
 
 .ui-tabs {
