ToolForm: Minor style fix

--- a/static/style/src/less/ui.less
+++ b/static/style/src/less/ui.less
@@ -110,6 +110,8 @@
     border: none !important;
     background: none !important;
     height: inherit !important;
+    width: inherit !important;
+    padding-right: 3px !important;
 }
 
 .ui-tabs {
