select2 fixes and impl. of missing feature import from path

--- a/static/style/src/less/base.less
+++ b/static/style/src/less/base.less
@@ -31,6 +31,11 @@
 
 // Mixins
 
+/* fix for zero width select2 - remove when fixed there */
+.select2-minwidth {
+    min-width: 256px;
+}
+
 .unselectable {
     .user-select(none);
 }
