--- a/static/style/src/less/library.less
+++ b/static/style/src/less/library.less
@@ -29,13 +29,19 @@ li.datasetRow:hover
     background-color: @table-bg-accent;
 }
 
-td.right-center{
+td.right-center {
     vertical-align: middle !important; 
     text-align: right;
-
 }
 
-.library_table{
+.library-genome-select {
+    max-width: 350px;
+}
+.library-extension-select {
+    max-width: 140px;
+}
+
+.library_table {
     td {
         border-top:1px solid #5f6990 !important;
     } 
