--- a/static/style/src/less/ui.less
+++ b/static/style/src/less/ui.less
@@ -280,9 +280,9 @@
         height: 100%;
         float: right;
         border-left: 1px solid @border-default-color;
-        padding-left: 9px;
-        padding-top: 4px;
         background: @btn-default-bg;
+        text-align: center;
+        line-height: 25px;
     }
 
     select {
