--- a/static/style/src/less/ui.less
+++ b/static/style/src/less/ui.less
@@ -44,6 +44,17 @@
     }
 }
 
+.ui-table-form-element {
+    .ui-table-form-title-optional {
+        font-weight: bold;
+        text-decoration: underline;
+        cursor: pointer;
+    }
+    .ui-table-form-field {
+        margin-top: 5px;
+    }
+}
+
 .ui-table-form-section {
     border-left: solid 3px @form-heading-bg;
     border-radius: 5px !important;
@@ -52,7 +63,6 @@
 
 .ui-table-form-title-strong {
     font-weight: bold;
-    padding-bottom: 5px;
 }
 
 .ui-table-form-info {
