--- a/static/style/src/less/library.less
+++ b/static/style/src/less/library.less
@@ -98,8 +98,7 @@ a.dark
     }
 }
 
-th.button_heading
-{
+th.button_heading{
     width: 2em;
 }
 
@@ -208,4 +207,10 @@ span.expandLink {
     padding: 0 2px 0 2px;
     border: 1px solid @state-upload-border;
     background: @state-upload-bg;
+}
+.pagination-sm {
+    height: 15px;
+}
+.library-paginator {
+    margin-left: 2em;
 }
