--- a/static/style/blue/library.css
+++ b/static/style/blue/library.css
@@ -42,3 +42,5 @@ span.expandLink{padding-left:12px;display:inline-block;vertical-align:middle;bac
 .libraryItem-queued{margin-right:2px;padding:0 2px 0 2px;border:1px solid #bfbfbf;background:#eee}
 .libraryItem-running{margin-right:2px;padding:0 2px 0 2px;border:1px solid #aa6;background:#ffc}
 .libraryItem-upload{margin-right:2px;padding:0 2px 0 2px;border:1px solid #1197c0;background:#a6e4f7}
+.pagination-sm{height:15px}
+.library-paginator{margin-left:2em}
